--- a/client/src/LoginPage.css
+++ b/client/src/LoginPage.css
@@ -15,6 +15,10 @@ body {
     border-radius: 1rem;
     box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
+    
+    border-color: black;
+    border-width: 0.2rem;
+    border-style: solid;
 }
 
 .login h1 {
